// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeDateField render should render correctly 1`] = `
.emotion-9 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-9:required {
  box-shadow: none;
}

.emotion-9:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-9:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-9:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-4 {
  cursor: default;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  position: relative;
}

.emotion-13 input {
  padding-right: 3rem;
}

.emotion-12 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-11 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-11:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-11:focus {
  box-shadow: none;
}

.emotion-10 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <div>
    <div
      class="emotion-2"
    >
      <div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-9"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <input
                    autocomplete="off"
                    class="emotion-0"
                    name="startDate"
                    placeholder="mm/dd/yyyy"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <span
              class="emotion-4"
            >
              <strong>
                until
              </strong>
            </span>
            <div
              class="emotion-3"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <input
                    autocomplete="off"
                    class="emotion-0"
                    name="finalDate"
                    placeholder="mm/dd/yyyy"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-12"
          >
            <button
              class="emotion-11"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-10"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M16 2c.619 0 .95.27.995.812l.005.13V4h1c1.273 0 1.938.607 1.996 1.822L20 6v14c0 1.273-.607 1.938-1.822 1.996L18 22H6c-1.273 0-1.938-.607-1.996-1.822L4 20V6.004c0-1.275.607-1.942 1.822-2L6 4h1V3c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L9.004 3v1H15V2.941c0-.627.333-.941 1-.941zm2 8H6v10h12V10zm-8.998 6H10c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L10 18H9c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L9.002 16H10zM15 16c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L10 14H9c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L9.002 12H10zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L15 14h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H15zm3-6H6v2h12V6z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeDateField render should render correctly when disabled 1`] = `
.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  position: relative;
}

.emotion-13 input {
  padding-right: 3rem;
}

.emotion-12 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-10 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
  background: #F0F0F5;
}

.emotion-9:required {
  box-shadow: none;
}

.emotion-9:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-9:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-9:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-4 {
  cursor: default;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #AAAAB9;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  border-radius: inherit;
}

.emotion-11 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-11:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-11:focus {
  box-shadow: none;
}

<div>
  <div>
    <div
      class="emotion-2"
    >
      <div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-9"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <input
                    autocomplete="off"
                    class="emotion-0"
                    disabled=""
                    name="startDate"
                    placeholder="mm/dd/yyyy"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <span
              class="emotion-4"
            >
              <strong>
                until
              </strong>
            </span>
            <div
              class="emotion-3"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <input
                    autocomplete="off"
                    class="emotion-0"
                    disabled=""
                    name="finalDate"
                    placeholder="mm/dd/yyyy"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-12"
          >
            <button
              class="emotion-11"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-10"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M16 2c.619 0 .95.27.995.812l.005.13V4h1c1.273 0 1.938.607 1.996 1.822L20 6v14c0 1.273-.607 1.938-1.822 1.996L18 22H6c-1.273 0-1.938-.607-1.996-1.822L4 20V6.004c0-1.275.607-1.942 1.822-2L6 4h1V3c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L9.004 3v1H15V2.941c0-.627.333-.941 1-.941zm2 8H6v10h12V10zm-8.998 6H10c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L10 18H9c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L9.002 16H10zM15 16c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L10 14H9c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L9.002 12H10zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L15 14h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H15zm3-6H6v2h12V6z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeDateField render should render correctly when invalid 1`] = `
.emotion-4 {
  cursor: default;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  position: relative;
}

.emotion-13 input {
  padding-right: 3rem;
}

.emotion-12 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-11 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-11:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-11:focus {
  box-shadow: none;
}

.emotion-10 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
  border: solid 1px #D01E29;
}

.emotion-9:required {
  box-shadow: none;
}

.emotion-9:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-9:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-9:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-9:focus-within:not(:disabled) {
  border: solid 1px #D3D4DD;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #D01E29;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: solid 1px #D01E29;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0:not(:disabled):focus {
  border: solid 1px #D3D4DD;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #D01E29;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

<div>
  <div>
    <div
      class="emotion-2"
    >
      <div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-9"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <input
                    autocomplete="off"
                    class="emotion-0"
                    name="startDate"
                    placeholder="mm/dd/yyyy"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <span
              class="emotion-4"
            >
              <strong>
                until
              </strong>
            </span>
            <div
              class="emotion-3"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <input
                    autocomplete="off"
                    class="emotion-0"
                    name="finalDate"
                    placeholder="mm/dd/yyyy"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-12"
          >
            <button
              class="emotion-11"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-10"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M16 2c.619 0 .95.27.995.812l.005.13V4h1c1.273 0 1.938.607 1.996 1.822L20 6v14c0 1.273-.607 1.938-1.822 1.996L18 22H6c-1.273 0-1.938-.607-1.996-1.822L4 20V6.004c0-1.275.607-1.942 1.822-2L6 4h1V3c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L9.004 3v1H15V2.941c0-.627.333-.941 1-.941zm2 8H6v10h12V10zm-8.998 6H10c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L10 18H9c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L9.002 16H10zM15 16c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L10 14H9c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L9.002 12H10zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L15 14h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H15zm3-6H6v2h12V6z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeDateField render should render correctly when opened 1`] = `
.emotion-9 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-9:required {
  box-shadow: none;
}

.emotion-9:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-9:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-9:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-4 {
  cursor: default;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  position: relative;
}

.emotion-13 input {
  padding-right: 3rem;
}

.emotion-12 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-11 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-11:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-11:focus {
  box-shadow: none;
}

.emotion-10 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-63 {
  z-index: 1200;
  background: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
  padding: 0.5rem .25rem .25rem .25rem;
  outline: none;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
}

.emotion-62 {
  width: 288px;
}

.emotion-25 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.emotion-19 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-16 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-16 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-16:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-16:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-61 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-61 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-27 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-27:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-26 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: #AAAAB9;
}

.emotion-26:hover {
  cursor: pointer;
  background: #F0F0F5;
}

<div>
  <div>
    <div
      class="emotion-2"
    >
      <div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-9"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <input
                    autocomplete="off"
                    class="emotion-0"
                    name="startDate"
                    placeholder="mm/dd/yyyy"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <span
              class="emotion-4"
            >
              <strong>
                until
              </strong>
            </span>
            <div
              class="emotion-3"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <input
                    autocomplete="off"
                    class="emotion-0"
                    name="finalDate"
                    placeholder="mm/dd/yyyy"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="emotion-12"
          >
            <button
              class="emotion-11"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-10"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M16 2c.619 0 .95.27.995.812l.005.13V4h1c1.273 0 1.938.607 1.996 1.822L20 6v14c0 1.273-.607 1.938-1.822 1.996L18 22H6c-1.273 0-1.938-.607-1.996-1.822L4 20V6.004c0-1.275.607-1.942 1.822-2L6 4h1V3c-.002-.667.33-1 1-1 .621 0 .954.287.998.862L9.004 3v1H15V2.941c0-.627.333-.941 1-.941zm2 8H6v10h12V10zm-8.998 6H10c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L10 18H9c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L9.002 16H10zM15 16c.667 0 1 .333 1 1s-.333 1-1 1h-1c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1zm-5-4c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L10 14H9c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995L9.002 12H10zm5 0c.667 0 1 .333 1 1 0 .619-.287.95-.862.995L15 14h-1c-.667.001-1-.332-1-1 0-.62.289-.952.864-.995l.138-.005H15zm3-6H6v2h12V6z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="emotion-63"
      tabindex="-1"
    >
      <div
        class="emotion-62"
      >
        <div
          class="emotion-25"
        >
          <div
            class="emotion-19"
          >
            <button
              class="emotion-16"
              tabindex="-1"
              title="Previous month"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-10"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
                  />
                </svg>
              </span>
            </button>
            Oct
            <button
              class="emotion-16"
              tabindex="-1"
              title="Next month"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-10"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="emotion-19"
          >
            <button
              class="emotion-16"
              tabindex="-1"
              title="Previous year"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-10"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
                  />
                </svg>
              </span>
            </button>
            2018
            <button
              class="emotion-16"
              tabindex="-1"
              title="Next year"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-10"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <table
          class="emotion-61"
        >
          <thead>
            <tr>
              <th>
                S
              </th>
              <th>
                M
              </th>
              <th>
                T
              </th>
              <th>
                W
              </th>
              <th>
                T
              </th>
              <th>
                F
              </th>
              <th>
                S
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                data-date="2018-09-30"
              >
                <span
                  aria-selected="false"
                  class="emotion-26"
                  role="button"
                >
                  30
                </span>
              </td>
              <td
                data-date="2018-10-01"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  01
                </span>
              </td>
              <td
                data-date="2018-10-02"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  02
                </span>
              </td>
              <td
                data-date="2018-10-03"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  03
                </span>
              </td>
              <td
                data-date="2018-10-04"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  04
                </span>
              </td>
              <td
                data-date="2018-10-05"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  05
                </span>
              </td>
              <td
                data-date="2018-10-06"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  06
                </span>
              </td>
            </tr>
            <tr>
              <td
                data-date="2018-10-07"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  07
                </span>
              </td>
              <td
                data-date="2018-10-08"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  08
                </span>
              </td>
              <td
                data-date="2018-10-09"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  09
                </span>
              </td>
              <td
                data-date="2018-10-10"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  10
                </span>
              </td>
              <td
                data-date="2018-10-11"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  11
                </span>
              </td>
              <td
                data-date="2018-10-12"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  12
                </span>
              </td>
              <td
                data-date="2018-10-13"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  13
                </span>
              </td>
            </tr>
            <tr>
              <td
                data-date="2018-10-14"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  14
                </span>
              </td>
              <td
                data-date="2018-10-15"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  15
                </span>
              </td>
              <td
                data-date="2018-10-16"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  16
                </span>
              </td>
              <td
                data-date="2018-10-17"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  17
                </span>
              </td>
              <td
                data-date="2018-10-18"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  18
                </span>
              </td>
              <td
                data-date="2018-10-19"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  19
                </span>
              </td>
              <td
                data-date="2018-10-20"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  20
                </span>
              </td>
            </tr>
            <tr>
              <td
                data-date="2018-10-21"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  21
                </span>
              </td>
              <td
                data-date="2018-10-22"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  22
                </span>
              </td>
              <td
                data-date="2018-10-23"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  23
                </span>
              </td>
              <td
                data-date="2018-10-24"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  24
                </span>
              </td>
              <td
                data-date="2018-10-25"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  25
                </span>
              </td>
              <td
                data-date="2018-10-26"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  26
                </span>
              </td>
              <td
                data-date="2018-10-27"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  27
                </span>
              </td>
            </tr>
            <tr>
              <td
                data-date="2018-10-28"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  28
                </span>
              </td>
              <td
                data-date="2018-10-29"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  29
                </span>
              </td>
              <td
                data-date="2018-10-30"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  30
                </span>
              </td>
              <td
                data-date="2018-10-31"
              >
                <span
                  aria-selected="false"
                  class="emotion-27"
                  role="button"
                >
                  31
                </span>
              </td>
              <td
                data-date="2018-11-01"
              >
                <span
                  aria-selected="false"
                  class="emotion-26"
                  role="button"
                >
                  01
                </span>
              </td>
              <td
                data-date="2018-11-02"
              >
                <span
                  aria-selected="false"
                  class="emotion-26"
                  role="button"
                >
                  02
                </span>
              </td>
              <td
                data-date="2018-11-03"
              >
                <span
                  aria-selected="false"
                  class="emotion-26"
                  role="button"
                >
                  03
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeDateField render should show calendar correctly when inputs are cleaned 1`] = `
.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F0F0F5;
}

<span
  aria-selected="false"
  class="emotion-0"
  role="button"
>
  01
</span>
`;

exports[`RangeDateField render should show calendar correctly when only finalDate is defined and is focused 1`] = `
.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  background: #0069D0;
  color: #FFFFFF;
  font-weight: bold;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-0:hover {
  background: #0069D0;
  color: #FFFFFF;
}

<span
  aria-selected="true"
  class="emotion-0"
  role="button"
>
  01
</span>
`;

exports[`RangeDateField render should show calendar correctly when only finalDate is defined and is focused 2`] = `"received is not a function"`;

exports[`RangeDateField render should show calendar correctly when only startDate is defined and is focused 1`] = `
.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  background: #0069D0;
  color: #FFFFFF;
  font-weight: bold;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-0:hover {
  background: #0069D0;
  color: #FFFFFF;
}

<span
  aria-selected="true"
  class="emotion-0"
  role="button"
>
  01
</span>
`;

exports[`RangeDateField render should show calendar correctly when only startDate is defined and is focused 2`] = `"received is not a function"`;

exports[`RangeDateField render should show calendar correctly when startDate and finalDate are defined and finalDate is focused 1`] = `"received is not a function"`;

exports[`RangeDateField render should show calendar correctly when startDate and finalDate are defined and finalDate is focused 2`] = `
.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  background: #0069D0;
  color: #FFFFFF;
  font-weight: bold;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-0:hover {
  background: #0069D0;
  color: #FFFFFF;
}

<span
  aria-selected="true"
  class="emotion-0"
  role="button"
>
  15
</span>
`;

exports[`RangeDateField render should show calendar correctly when startDate and finalDate are defined and startDate is focused 1`] = `
.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  background: #0069D0;
  color: #FFFFFF;
  font-weight: bold;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-0:hover {
  background: #0069D0;
  color: #FFFFFF;
}

<span
  aria-selected="true"
  class="emotion-0"
  role="button"
>
  01
</span>
`;

exports[`RangeDateField render should show calendar correctly when startDate and finalDate are defined and startDate is focused 2`] = `"received is not a function"`;
